<resources>
    <string name="app_name">Contact Manager</string>
    <string name="lbl_contacts">Contacts</string>
    <string name="lbl_call_logs">Call Logs</string>
    <string name="lbl_sms">SMS</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="lbl_permission">Permissions</string>

    <string name="msg_permissions_needs_to_be_granted">In order to use this app, some permissions need to be granted</string>
    <string name="lbl_allow_permissions">Allow Contact Manager access to</string>
    <string name="lbl_grant_access">Grant Access</string>
    <string name="lbl_loading">Loading...</string>
    <string name="lbl_serach">Search</string>

    <string name="lbl_action">Action</string>
    <string name="msg_contact_dialog">Call or SMS to %s</string>
    <string name="btn_call">Call</string>
    <string name="btn_sms">SMS</string>
    <string name="lbl_sending_sms">Sending SMS with default text...</string>
    <string name="lbl_incoming">Incoming Calls</string>
    <string name="lbl_outgoing">Outgoing Calls</string>
    <string name="lbl_missed">Missed Calls</string>
    <string name="lbl_refresh">Refresh</string>
    <string name="lbl_refresh_call_logs">Refreshing Call Logs...</string>
    <string name="lbl_refresh_contacts">Refreshing Contacts...</string>
    <string name="lbl_refresh_sms">Refreshing SMS...</string>
    <string name="lbl_grant_all_permission">You need to allow access to all the permissions</string>
    <string name="btn_ok">Ok</string>
    <string name="btn_cancel">Cancel</string>
    <string name="lbl_contacts_permission">Access Contacts</string>
    <string name="lbl_call_phone">Access to Phone Call</string>
    <string name="lbl_send_sms">Access to Send SMS</string>
    <string name="lbl_call_log">Access to Call Logs</string>
    <string name="lbl_read_sms">Access to Read SMS</string>
    <string name="lbl_permission_error">To use this app you need to grant some permissions</string>
    <string name="lbl_no_data_found">No Data Found</string>
    <string name="lbl_hello_text">Hello there!!</string>
</resources>