<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_contacts">

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.mangoapps.contactmanager.ui.contacts.ContactFragment"
        android:label="@string/lbl_contacts"
        tools:layout="@layout/fragment_contact" />

    <fragment
        android:id="@+id/nav_calllogs"
        android:name="com.mangoapps.contactmanager.ui.calllogs.CallLogsFragment"
        android:label="@string/lbl_call_logs"
        tools:layout="@layout/fragment_sms" />

    <fragment
        android:id="@+id/nav_sms"
        android:name="com.mangoapps.contactmanager.ui.sms.SmsFragment"
        android:label="@string/lbl_sms"
        tools:layout="@layout/fragment_calllogs" />
</navigation>