<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlTopLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnLayout"
        app:layout_constraintBottom_toTopOf="@id/btnLayout">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="28dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:text="@string/lbl_permission"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/subTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_marginStart="28dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="28dp"
            android:gravity="center"
            android:text="@string/msg_permissions_needs_to_be_granted"
            android:textColor="@color/black"
            android:textSize="14dp" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/subTitle"
            android:layout_margin="16dp"
            android:src="@drawable/permission" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rlPermissionList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView"
            android:background="@color/white"
            android:divider="@null"
            android:layout_marginTop="10dp"
            android:groupIndicator="@null"
            android:nestedScrollingEnabled="true"
            android:scrollbars="none"
            tools:listitem="@layout/permission_view" />

    </RelativeLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/btnLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btnGrantPermission"
            style="@style/primaryPositiveButtonStyle"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/lbl_grant_access"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>

